--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,14 @@
 /* styles/global.css */
-*{
+* {
   /* background-color: #f0f4f8; */
-  font-family: 'Jost', sans-serif;
-  
+  font-family: "Jost", sans-serif;
 }
-body{
+body {
   /* background-color: #242932; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Jost', sans-serif;
+  font-family: "Jost", sans-serif;
 }
 html {
   scroll-behavior: smooth;
@@ -21,8 +20,6 @@ a {
 
 /* Customize selection color */
 ::selection {
-  background-color: #082362; 
-  color: #fff; 
+  background-color: #ef4023;
+  color: #fff;
 }
-
-
