--- a/app/styles/Navbar.module.css
+++ b/app/styles/Navbar.module.css
@@ -43,7 +43,7 @@
 }
 
 .menu a:hover {
-  color: #082362;
+  color: #ef4023;
 }
 
 .hamburger {
@@ -66,7 +66,7 @@
     flex-direction: column;
     gap: 10px;
     /* background-color: #242932; */
-  background-color: #fff;
+    background-color: #fff;
     position: absolute;
     top: 60px; /* Adjust to align with the navbar height */
     right: 0;
@@ -87,6 +87,4 @@
     height: 200%;
     position: relative;
   } */
-
 }
-
