--- a/app/styles/Commercial.module.css
+++ b/app/styles/Commercial.module.css
@@ -1,7 +1,7 @@
 .Project {
-  color: white;
-  background-color: #ef4023;
-  font-family: "Jost", sans-serif;
+    color: white;
+  background-color: #001443;
+  font-family: 'Jost', sans-serif;
   /* min-height: 100vh; */
   padding: 20px 0px;
 }
@@ -21,9 +21,9 @@
 
 .description {
   line-height: 1.5;
-  color: white;
+  color: #c6c5c5;
   font-size: 1.1em;
-  font-family: "Jost", sans-serif;
+  font-family: 'Jost', sans-serif;
   text-align: start;
   padding: 0 20px;
 }
@@ -33,6 +33,8 @@
   width: 100%;
   margin: 0 auto;
   margin-bottom: 0px;
+ 
+
 }
 
 .sliderWrapper {
@@ -44,7 +46,7 @@
   top: 50%;
   outline: none;
   border-radius: 12px;
-  border-color: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, .1);
   /* height: 45px;
   width: 50px; */
   /* min-height: 5vh !important;
@@ -59,7 +61,7 @@
   /* justify-content: center; */
   transform: translateY(-50%);
   /* border-width: 1px; */
-  color: #ef4023;
+  color: #07294d;
   background-color: white;
 }
 
@@ -96,7 +98,7 @@
   height: 500px;
   object-fit: cover;
   /* border-radius: 40px; */
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border:1px solid rgba(255, 255, 255, .2);
   background-color: #fff;
 }
 
@@ -115,9 +117,10 @@
   -webkit-filter: none;
 }
 
-.CompanyLogoImage {
+.CompanyLogoImage{
   width: 100%;
   height: 100%;
+
 }
 
 .companyContent {
@@ -129,7 +132,7 @@
 
 .companyName {
   text-align: start;
-  color: rgb(250, 123, 37);
+  color: rgb(250,123,37);
   font-weight: 600;
   font-size: 1.5em;
 }
@@ -138,6 +141,7 @@
   text-align: start;
   font-weight: 600;
   font-size: 1em;
+
 }
 
 .row {
@@ -165,9 +169,10 @@
 
 .authorPosition {
   font-size: 0.9em;
-  font-family: "Jost", sans-serif;
-  text-align: start;
+  font-family: 'Jost', sans-serif;
+text-align: start;
 }
+
 
 .cardContent {
   padding: 20px;
@@ -186,6 +191,7 @@
   font-weight: bold;
   margin-bottom: 10px;
   color: black;
+
 }
 
 .features {
@@ -201,6 +207,7 @@
   max-height: 1em;
 }
 
+
 .footer {
   display: flex;
   justify-content: space-between;
@@ -215,11 +222,11 @@
   border-radius: 5px;
   cursor: pointer;
   text-align: center;
-  background: #ef4023;
-  color: white;
+  background: #082362;
+  color: white; 
 }
 
-.leasingButton {
+.leasingButton{
   max-width: fit-content;
   /* padding: 10px 30px; */
 }
@@ -232,17 +239,21 @@
   border-radius: 5px;
   cursor: pointer;
   text-align: center;
-  background: #ef4023;
+  background: #082362;
   color: white;
 }
 
-.detailsLink:hover,
-.leasing:hover {
+.detailsLink:hover,.leasing:hover {
   text-decoration: none;
-  background: #ff0000;
+    background: #0e3dab;
 }
 
+
+
+
+
 @media only screen and (max-width: 750px) {
+
   .imageList {
     scroll-snap-type: x mandatory;
   }
@@ -253,15 +264,16 @@
   }
 
   .imageItem {
-    /* height: 50vh; */
+  /* height: 50vh; */
     width: 100%;
   }
+
 
   .companyInfo {
     min-height: 5vh;
   }
 
-  .leasingButton {
+  .leasingButton{
     padding: 10px 20px;
   }
 }
@@ -281,20 +293,21 @@
     line-height: normal;
     max-height: none;
   }
-  .imageItem {
-    /* height: 60vh; */
+  .imageItem{
+  /* height: 60vh; */
   }
-  .slideButton {
+  .slideButton{
     top: 40%;
   }
 }
 
-@media screen and (max-width: 500px) {
-  .slideButton {
+@media screen and (max-width:500px){
+  .slideButton{
     /* height: 40px;
     width: 40px; */
   }
 }
+
 
 @media screen and (max-width: 490px) {
   .leasing {
@@ -304,7 +317,10 @@
   .detailsLink {
     font-size: 0.7em;
   }
-  .imageItem {
+  .imageItem{
     /* height: 40vh; */
-  }
-}
+    }
+} 
+
+
+
