--- a/app/styles/Team.module.css
+++ b/app/styles/Team.module.css
@@ -21,7 +21,7 @@
 }
 
 .leftColumn h2 {
-  color: #ef4023;
+  color: #07294d;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.7em;
@@ -59,7 +59,7 @@
 }
 
 .overlay {
-  background: #ef4023;
+  background: #0a1e4e;
   width: 100%;
   transition: .5s ease;
   opacity: 0;
