Update Footer component to reflect new branding for AI Fashion, including revised company description and service offerings. Adjust copyright notice accordingly. Enhance Location styles with new link color for improved visibility.

--- a/app/styles/Location.module.css
+++ b/app/styles/Location.module.css
@@ -134,6 +134,10 @@
   color: white;
 }
 
+.textOne a{
+  color:white
+}
+
 @media screen and (max-width: 3000px) {
   .phone, .address, .email {
     margin-top: 1vh;
